# OceanOpsClient

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: sync.yml
OceanOpsClient/: OceanOpsClient.py  __init__.py  _version.py  config.py
OceanOpsClient/config/: .env.template
OceanOpsClient/passport_schema/: local_schema.json
docs/source/: conf.py  install.rst  usage.rst
examples/: passport_thornton_buoy.json  pull_thornton_buoy.py  push_thornton_buoy.py  validate_passport.py
tests/: .env  test_get_passport.py  test_init.py  test_push_passport.py  test_settings.py  test_validate_passport.py  test_versioning.py
