[build-system]
requires = ["setuptools>=62.6", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "OceanOps"
authors = [{name = "Willem Boone", email = "willem.boone@vliz.be"}]
dynamic = ["dependencies", "version"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
version = { attr = "OceanOpsClient._version.__version__" }

[project.optional-dependencies]
docs = [
    "sphinx == 7.1.2",
    "sphinx-rtd-theme == 1.3.0rc1"
]
tests = ["pytest"]
